demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nmpi-demo
  labels:
    app: nmpi-demo
spec:
  selector:
    app: nmpi-demo
  ports:
    - name: http
      port: 80
      targetPort: 8080
